--- a/scss/_about_me.scss
+++ b/scss/_about_me.scss
@@ -65,6 +65,13 @@
 
     &-content {
         @include mobile-cards;
+        a {
+            //
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            //
+        }
 
         h3,
         p {
